# aspice-check

./: .gitignore  LICENSE  README.md
aspice-check/: README.md  pyproject.toml
aspice-check/src/aspice_check/: __init__.py  mcp_server.py  mcp_tools.py  pipeline.py
aspice-check/tests/: __init__.py  conftest.py
aspice-check/tests/property/: __init__.py  test_prop01_package_isolation.py  test_prop04_top_level_imports.py  test_prop19_mcp_errors.py
aspice-eval/: .gitignore  MANIFEST.in  README.md  pyproject.toml
aspice-eval/examples/: sample_sdp.md
aspice-eval/knowledge_base/aspice/: _metadata.yaml  man.yaml  sup.yaml  swe.yaml  sys.yaml
aspice-eval/knowledge_base/schema/: criteria_schema.json
aspice-eval/scripts/: extract_all_processes.py  extract_pam.py  extract_pam_section.py  md_to_confluence.py  md_to_html.py  publish_to_confluence.py  validate_yaml.py
aspice-eval/scripts/pam_extracts/: capability_levels.txt  info_items.txt  man.txt  sup.txt  swe.txt  sys.txt
aspice-eval/src/aspice_eval/: __init__.py  analyze.py  cli.py  convenience.py  evaluator.py  exceptions.py  kb_validator.py  knowledge_base  knowledge_base.py  level_calculator.py  models.py  report_generator.py  report_renderer.py  sdp_ingester.py
aspice-eval/src/aspice_eval/providers/: __init__.py  anthropic_provider.py  bedrock.py  openai_provider.py
aspice-eval/tests/: conftest.py
aspice-eval/tests/integration/: __init__.py  test_cli_evaluate.py
aspice-eval/tests/property/: test_prop01_criteria_filtering.py  test_prop02_schema_validation.py  test_prop03_api_completeness.py  test_prop03_markdown_acceptance.py  test_prop04_unsupported_format.py  test_prop05_rating_constraint.py  test_prop06_group_coverage.py  test_prop07_capability_level.py  test_prop08_blocking_attributes.py  test_prop09_evaluator_roundtrip.py  test_prop09_report_sections.py  test_prop10_evaluator_type.py  test_prop10_gap_recommendation.py  test_prop11_traceability.py  test_prop12_report_metadata.py  test_prop13_path_not_found.py  test_prop13_report_scoping.py  test_prop14_kb_completeness.py  test_prop14_kb_from_dict.py  test_prop15_config_validation.py  test_prop15_renderer_delegation.py  test_prop16_unsupported_format.py  test_prop17_unknown_provider.py  test_prop20_sanitize_title.py  test_prop21_token_tracker.py  test_prop22_credential_resolution.py  test_prop23_summary_format.py  test_prop24_target_level_validation.py  test_prop25_group_validation.py  test_prop26_stage_failure.py
aspice-eval/tests/unit/: __init__.py  test_analyze.py  test_chunking.py  test_criteria_schema.py  test_error_handling.py  test_kb_validator.py  test_knowledge_base.py  test_models.py  test_packaging.py  test_providers.py
confluence-ai/: README.md  pyproject.toml
confluence-ai/src/confluence_ai/: __init__.py  calendar_client.py  calendar_export.py  calendar_renderer.py  cli.py  client.py  describer.py  downloader.py  exceptions.py  export.py  json_renderer.py  models.py  output_renderer.py  parser.py  publish.py  renderer.py  url_parser.py
confluence-ai/src/confluence_ai/providers/: __init__.py  anthropic_describer.py  (+2 more)
confluence-ai/tests/: conftest.py
confluence-ai/tests/integration/: test_calendar_mcp_tools.py  test_end_to_end.py  test_gliffy_export.py  test_partial_failure.py
confluence-ai/tests/property/: test_prop01_calendar_mapping.py  test_prop01_credential_precedence.py  test_prop02_api_completeness.py  test_prop02_event_mapping.py  test_prop02_macro_extraction.py  test_prop02_url_parsing.py  test_prop03_daterange_overlap.py  test_prop03_event_mapping.py  test_prop04_get_events_passthrough.py  test_prop04_heading_compat.py  test_prop04_json_roundtrip.py  test_prop05_credential_validation.py  test_prop05_json_roundtrip.py  test_prop05_macro_fallback.py  test_prop05_markdown_frontmatter.py  test_prop06_image_rendering.py  test_prop06_invalid_url.py  test_prop06_markdown_frontmatter.py  test_prop06_markdown_ordering.py  test_prop07_allday_dichotomy.py  test_prop07_describer_roundtrip.py  test_prop07_markdown_ordering.py  test_prop07_placeholder.py  test_prop08_allday_dichotomy.py  test_prop08_describer_type.py  test_prop08_description_format.py  test_prop08_filename_sanitization.py  test_prop09_export_result.py  test_prop09_filename_sanitization.py  test_prop09_gliffy_prompt.py  test_prop10_export_result.py  test_prop10_filename_sanitization.py  test_prop11_gliffy_resolver.py  test_prop11_parent_fallback.py  test_prop11_renderer_type.py  test_prop12_export_summary.py  test_prop12_request_invariants.py  test_prop12_unregistered_format.py  test_prop13_frontmatter.py  test_prop13_grouped_name_resolution.py  (+4 more)
confluence-ai/tests/unit/: test_bedrock_describer.py  test_calendar_client_discovery.py  test_calendar_client_errors.py  test_calendar_client_passthrough.py  test_calendar_exceptions.py  test_calendar_export_defaults.py  test_calendar_export_grouped.py  test_calendar_renderer_json.py  test_calendar_renderer_markdown.py  test_cli.py  test_client.py  test_describer.py  test_downloader.py  test_models.py  test_parser.py  test_public_api.py  test_publish.py  test_renderer.py  test_url_parser.py
confluence-exporter/: README.md  pyproject.toml
confluence-exporter/src/confluence_exporter/: __init__.py  cli.py  client.py  describer.py  downloader.py  exceptions.py  models.py  parser.py  renderer.py  url_parser.py
confluence-exporter/tests/integration/: test_end_to_end.py  test_gliffy_export.py  test_partial_failure.py
confluence-exporter/tests/property/: test_prop01_credential_precedence.py  test_prop02_url_parsing.py  test_prop04_heading_compat.py  test_prop05_macro_fallback.py  test_prop06_image_rendering.py  test_prop07_placeholder.py  test_prop08_description_format.py  test_prop09_gliffy_prompt.py  test_prop10_filename_sanitization.py  test_prop11_gliffy_resolver.py  test_prop12_export_summary.py  test_prop13_frontmatter.py
confluence-exporter/tests/unit/: test_bedrock_describer.py  test_cli.py  test_client.py  test_describer.py  test_downloader.py  test_models.py  test_parser.py  test_renderer.py  test_url_parser.py
(+37 files in other folders)
