[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspice-eval"
version = "0.1.0"
description = "ASPICE Knowledge Base & Agent Workflow evaluation tool for SDP gap analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ASPICE Eval Contributors"},
]
keywords = ["aspice", "automotive", "compliance", "gap-analysis", "spice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.90.0",
]
bedrock = ["boto3>=1.34.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all = ["boto3>=1.34.0", "openai>=1.0.0", "anthropic>=0.30.0"]

[project.scripts]
aspice-eval = "aspice_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aspice_eval = [
    "py.typed",
    "knowledge_base/**/*.yaml",
    "knowledge_base/**/*.json",
]

[tool.setuptools]
# Follow symlinks so knowledge_base/ gets included
zip-safe = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hypothesis]
database_backend = "directory"
