[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-exporter"
version = "0.1.0"
description = "CLI tool to export Confluence Cloud pages to Markdown with images and AI-generated descriptions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Confluence Exporter Contributors"},
]
keywords = ["confluence", "markdown", "export", "gliffy", "aspice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "click>=8.1.0",
    "atlassian-python-api>=3.41.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.90.0",
    "pytest-mock",
]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.0.0"]
bedrock = ["boto3>=1.28.0", "botocore[crt]>=1.28.0"]
all = ["anthropic>=0.30.0", "openai>=1.0.0", "boto3>=1.28.0", "botocore[crt]>=1.28.0"]

[project.scripts]
confluence-export = "confluence_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hypothesis]
database_backend = "directory"
